crates/solidity/testing/snapshots/bindings_output/using/top_level/generated/0.7.1-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or FunctionKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
    ╭─[input.sol:7:1]
    │
  7 │ ╭─▶ using {increment} for Counter;
    ┆ ┆   
 13 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ struct Counter {
   │        ───┬───  
   │           ╰───── def: 1
 2 │     uint value;
   │          ──┬──  
   │            ╰──── def: 2
   │ 
 5 │ function increment(Counter memory _counter) public {}
   │          ────┬──── ───┬───        ────┬───  
   │              ╰────────────────────────────── def: 3
   │                       │               │     
   │                       ╰───────────────────── ref: 1
   │                                       │     
   │                                       ╰───── def: 4
───╯
